# OSM-CACLR-address-dashboard

./: .gitignore  .sqlfluff  AGENTS.md  README.md  config.ini  pyproject.toml
.github/workflows/: format.yml
.trunk/: trunk.yaml
.trunk/configs/: .flake8
includes/: osm_potential_addresses.sql  osm_potential_addresses_street.sql  osm_potential_addresses_withgeom.sql
metrics/: addr_interpolation.sql  addresses_without_housenumber.sql  addresses_without_housenumber_not_in_osm.sql  caclr_mismatch.sql  duplicate_address_ids.sql  duplicate_osm_addresses.sql  far_match_addresses.sql  garbage_housenumbers.sql  housenames_only.sql  housenumber_comma.sql  housenumber_invalid_format.sql  housenumber_leading_zero.sql  housenumber_lowercase.sql  housenumber_not_numeric.sql  housenumber_semicolon.sql  housenumber_slash.sql  housenumber_whitespace.sql  invalid_street_postcode.sql  localities_with_maison.sql  missing_caclr_reference.sql  missing_city.sql  missing_housenumber_existing_street.sql  missing_postcode.sql  mixed_maison_localities.sql  no_match_in_caclr.sql  osm_no_number_or_name.sql  postcode_prefix_l.sql  ref_missing_wrong.sql  ref_missing_wrong_most_probably.sql  same_position_addresses.sql  streets_missing_in_osm.sql  unclosed_address_ways.sql  unknown_cities.sql  unknown_postcodes.sql  unknown_streets.sql  weird_housenumbers.sql  wrong_parcel_addresses.sql
metrics/cleanup/: addresses_without_housenumber.sql  (+14 more)
scripts/: dump_fixture_db.py  generate_dashboard.py  run_metrics_sqlite.py
templates/: base.html  dashboard.html
tests/: test_dashboard.py  test_metrics.py  test_templates.py
(+3 files in other folders)
