[project]
name = "osm-caclr-address-dashboard"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "jinja2",
    "psycopg2-binary",
    "pysqlite3-binary>=0.5.4; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "black",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff",
    "sqlfluff>=3.4.1",
    "ty",
]

[tool.black]
line-length = 99

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F"]

[tool.sqlfluff]
dialect = "postgres"
exclude_rules = "LT02"
